fix: vertical flickering on refresh

--- a/src/app/pages/bes2/yearly-achievements/bes2-yearly-achievements.component.scss
+++ b/src/app/pages/bes2/yearly-achievements/bes2-yearly-achievements.component.scss
@@ -2,6 +2,6 @@
   align-self: end;
 }
 
-.container {
-  min-height: calc(100vh - 64px);
+.progress-bar-container {
+  min-height: 64px;
 }
