--- a/src/app/pages/bes3/achievements/bes3-achievements.component.scss
+++ b/src/app/pages/bes3/achievements/bes3-achievements.component.scss
@@ -1,3 +1,7 @@
 .refresh-button {
   align-self: end;
 }
+
+.progress-bar-container {
+  min-height: 64px;
+}
