--- a/src/app/pages/bes3/yearly-achievements/bes3-yearly-achievements.component.scss
+++ b/src/app/pages/bes3/yearly-achievements/bes3-yearly-achievements.component.scss
@@ -2,6 +2,10 @@
   align-self: end;
 }
 
+.progress-bar-container {
+  min-height: 64px;
+}
+
 .container {
   min-height: calc(100vh - 64px);
 }
